# photolog-automation

./: .gitignore  README.md  prompt.md  pyproject.toml  requirements-dev.txt
.github/workflows/: build.yml
photolog/: __main__.py  app.py
photolog/core/: config.py  copy_detect.py  copy_job.py  dev.py  dev_fixtures.py  events.py  fs.py  junctions.py  manifest.py  notify.py  paths.py  thumb_detect.py  thumb_job.py
photolog/ui/: copy_tab.py  dev_tab.py  full_tab.py  preflight.py  setup_dialog.py  thumb_tab.py  widgets.py
tests/: test_detectors.py  test_thumb_safety.py
