[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "photolog"
version = "0.1.0"
description = "Yearly USB -> RPMS$ ingest + thumbnail tool for Windows Server"
requires-python = ">=3.11"
readme = "README.md"

[project.scripts]
photolog = "photolog.app:main"

[tool.setuptools.packages.find]
include = ["photolog*"]
